[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fundamentus"
dynamic = ["version"]
#version = "0.3.3"

requires-python = ">=3.9"
dependencies = [
    "lxml >= 5.4.0",
    "pandas >= 2.3.0",
    "requests >= 2.32.4",
    "requests-cache >= 1.2.1",
    "tabulate >= 0.9.0",
]

authors = [
    { name = "Mv-Marcus Vinicius Ferreira", email = "ferreira.mv@gmail.com" },
]
description = "Fundamentus: API to load data from Fundamentus website: https://www.fundamentus.com.br/"
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/mv/fundamentus-api/"

# [project.scripts]
# my-script = "my_package.module:function"

[tool.hatch.version]
path = "src/fundamentus/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
]
